1991-06-11  dickey@software.org

	* src/dedsigs.c: lint (apollo sr10.2)

1991-06-11  ste_cm@software.org

	* src/dedsigs.c: BASELINE Tue Jun 11 08:46:03 1991 -- apollo sr10.3

1991-06-05  dickey@software.org

	* Makefile: cleanup install-rule

1991-06-05  ste_cm@software.org

	* Makefile: BASELINE Mon Jun 10 10:09:56 1991 -- apollo sr10.3

1991-06-04  dickey@software.org

	* src/dedtype.c:
	forgot to reset column on successive blank-lines that are
	suppressed.

1991-06-04  ste_cm@software.org

	* src/dedtype.c: BASELINE Mon Jun 10 10:09:56 1991 -- apollo sr10.3

1991-06-04  dickey@software.org

	* src/ftree.c:
	corrected logic in q/Q/F/B commands which caused program to
	hang when call on 'fd_ring()' failed to find a path.

1991-06-04  ste_cm@software.org

	* src/ftree.c: BASELINE Mon Jun 10 10:09:56 1991 -- apollo sr10.3

1991-05-31  dickey@software.org

	* src/version.h:
	highlight the subtree in ftree 'R' command. mods for apollo
	sr10.3

1991-05-31  ste_cm@software.org

	* src/version.h: BASELINE Mon Jun 10 10:09:56 1991 -- apollo sr10.3

1991-05-31  dickey@software.org

	* src/showpath.c:
	added 'base' argument to control highlighting of a portion
	of the path.

1991-05-31  ste_cm@software.org

	* src/showpath.c: BASELINE Mon Jun 10 10:09:56 1991 -- apollo sr10.3

1991-05-31  dickey@software.org

	* src/ftree.c:
	modified interface to 'showpath()' so that 'fd_slow()' will
	highlight subtree scanned by 'ft_scan()'. increased width
	of number-tag.

	* src/ded.c: modified interface to 'showpath()'

1991-05-31  ste_cm@software.org

	* src/ded.c: BASELINE Mon Jun 10 10:09:56 1991 -- apollo sr10.3

1991-05-16  dickey@software.org

	* src/dedsigs.c: mods to accommodate apollo sr10.3

	* src/showpath.c, src/sortset.c:
	apollo sr10.3 cpp complains about tag on #endif

1991-05-16  ste_cm@software.org

	* src/sortset.c: BASELINE Mon Jun 10 10:09:56 1991 -- apollo sr10.3

1991-05-16  dickey@software.org

	* src/ftree.c: mods to accommodate apollo sr10.3
