@@ -1,4 +1,4 @@
-MANIFEST for ded, version t19910611
+MANIFEST for ded, version t19910620
 --------------------------------------------------------------------------------
 MANIFEST                        this file
 Makefile                        top-level makefile for unix directory editor
